jblyberg: committed 4/14/2009

iiitools_2007.php:

	my_curl_exec() - moved most of the curl init stuff into the constructor.  The result is that it now handles sessions much more efficiently.
	Updated scrape functions to reflect 2007 new idiosyncrasies. 

locum_iii_2007.php:

	Class name changed to reflect new version.
	require_once('iiitools_2006.php') changed to require_once('iiitools_2007.php') in numerous places.